--- a/StackSlider/css/style.css
+++ b/StackSlider/css/style.css
@@ -1,167 +1,15 @@
-/** 2014 - En Voiture Simone **/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-	background-color: #f3f3f3;
-
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
+@import url('demo.css');
 
 @font-face {
-    font-family: 'bebas_neueregular';
-    src: url('../fonts/BebasNeue-webfont.eot');
-    src: url('../fonts/BebasNeue-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/BebasNeue-webfont.woff') format('woff'),
-         url('../fonts/BebasNeue-webfont.ttf') format('truetype'),
-         url('../fonts/BebasNeue-webfont.svg#bebas_neueregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
+	font-family: 'icomoon';
+	src:url('fonts/icomoon.eot?jlryl5');
+	src:url('fonts/icomoon.eot?#iefixjlryl5') format('embedded-opentype'),
+		url('fonts/icomoon.woff?jlryl5') format('woff'),
+		url('fonts/icomoon.ttf?jlryl5') format('truetype'),
+		url('fonts/icomoon.svg?jlryl5#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
-
-.font{
-	font-family: 'bebas_neueregular';
-}
-/** HEADER **/
-
-#header{
-	height:150px;
-	width: 1012px;
-	margin:0px auto;
-}
-
-.logo, .navigation, .sociaux{
-	float: left;
-	display: inline-block;
-
-}
-.navigation{
-	padding-top:35px;
-}
-
-.sociaux{
-	padding:20px 0px 0px 30px;
-}
-
-.navigation li {
-	
-	display: inline-block;
-	float: left;
-	padding-left: 50px;
-
-
-}
-
-.navigation a{
-	font-family: 'bebas_neueregular';
-	font-size: 2em;
-	text-decoration: none;
-	color: #bc2133;
-	border-top: 3px solid #f9c87c;
-	border-bottom: 3px solid #f9c87c;
-	
-
-
-}
-
-a.facebook
-{
-	background: url("../img/icons/facebook.png") 0 0 no-repeat;
-	display: inline-block;
-	width: 64px;
-	height: 64px;
-
-}
-
-
-
-a.twitter
-{
-	background: url("../img/icons/twitter.png") 0 0 no-repeat;
-	display: inline-block;
-	width: 64px;
-	height: 64px;
-
-}
-
-
-
-a.instagram
-{
-	background: url("../img/icons/instagram.png") 0 0 no-repeat;
-	display: inline-block;
-	width: 64px;
-	height: 64px;
-
-}
-
-/** FIN HEADER **/
-
-/** SLOGAN **/
-.slogan{
-	height: 75px;
-	background-color:#f9c87c;
-}
-
-.slogan h1{
-	color: #bc2133;
-	font-size: 40px;
-	font-family: 'Lobster', cursive;
-	text-align: center;
-	padding-top: 1%;
-}
-
-/** FIN SLOGAN **/
-#slider{
-
-	width: 960px;
-	margin: 0px auto;
-	height: 640px;
-}
-
-/** SLIDER **/
-
-
 
 
 .js .st-stack-raw {
@@ -172,7 +20,7 @@ a.instagram
 	width: 100%;
 	height: 500px;
 	position: relative;
-	margin: -30px auto;
+	margin: 0 auto;
 	-webkit-perspective: 1200px;
 	-webkit-perspective-origin : 50% 100%;
 	-moz-perspective: 1200px;
@@ -226,9 +74,11 @@ a.instagram
 
 .st-wrapper .st-title,
 .st-wrapper nav {
+	position: absolute;
 	width: 100%;
 	left: 0;
-	top:80%;
+	bottom: 0;
+	top:60%;
 	text-align: center;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
@@ -247,6 +97,24 @@ a.instagram
 	backface-visibility: hidden;
 }
 
+.st-wrapper .st-title h2 {
+	padding: 0 20px;
+	font-size: 28px;
+	color: #dc4e2a;
+	font-weight: 400;
+	letter-spacing: 3px;
+	font-family: 'Englebert', Arial, sans-serif;
+	line-height: 38px;
+	text-shadow: 0 1px 1px rgba(255,255,255,0.6);
+}
+
+.st-wrapper .st-title h3 {
+	font-size: 15px;
+	font-weight: 700;	
+	letter-spacing: 1px;
+	color: #fff;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+}
 
 .st-wrapper nav span {
 	color: transparent;
@@ -259,30 +127,50 @@ a.instagram
 }
 
 .st-wrapper nav span:first-child {
-	left: -11%;
+	left: -6%;
 }
 
 .st-wrapper nav span:last-child {
-	left: 103%;
+	left: 98%;
 }
 .st-wrapper nav span.prev{
 	background-image: url(../images/arrow-left.png);
-	width: 81px;
-	height: 85px;
+	width: 80px;
+	height: 80px;
 	position: absolute;
 
 }
 
 .st-wrapper nav span.next{
 	background-image: url(../images/arrow-right.png);
-	width: 81px;
-	height: 85px;
+	width: 80px;
+	height: 80px;
 	position: absolute;
 
 }
 
 .st-wrapper nav span:before {
-
+	/*font-family: 'icomoon';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	font-size: 30px;
+	line-height: 40px;
+	text-align: center;
+	-webkit-font-smoothing: antialiased;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	color: #fff;
+	background: #30ad8c;
+	border-radius: 50%;
+	cursor: pointer;
+	text-shadow: 0 1px 1px rgba(255,255,255,0.5);
+	box-shadow: 0 1px 1px rgba(0,0,0,0.1);*/
 }
 
 
@@ -432,74 +320,3 @@ a.instagram
 	}
 }
 
-
-
-
-/** FIN SLIDER **/
-
-/** PARTAGE **/
-#partage{
-	text-align: center;
-	margin-top:30px;
-}
-
-#partage img{
-	padding-left:20px;
-}
-/** FIN PARTAGE **/
-
-/** PRESENTATION **/
-
-.presentation{
-	height:75px;
-	background-color: #c95665;
-	margin-top: 30px;
-}
-
-.presentation h2{
-	color: #FFF;
-	font-size: 40px;
-	font-family: 'Lobster', cursive;
-	text-align: center;
-	padding-top: 1%;
-}
-
-/** PRESENTATION **/
-
-/** COMPTEUR DE DEFIS **/
-
-#container_defis{
-	height: 400px;
-}
-
-/** FIN COMPTEUR DE DEFIS **/
-/** FOOTER **/
-
-#footer{
-	height: 48px;
-	background-color: #217d66;
-	display: block;
-
-	bottom: 0;
-}
-
-#footer ul{
-	width: 950px;
-	margin:0px auto;
-
-}
-#footer li{
-	float: left;
-	padding: 20px 0px 0px 30px;
-
-}
-
-#footer a{
-	color: #FFF;
-	font-family: Arial, sans-serif;
-	font-size: 14px;
-	text-transform: uppercase;
-	text-decoration: none;
-	text-align: center;
-}
-/** FIN FOOTER **/
